# waybar-configurator

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.sh
data/: waybar-configurator.desktop
waybar_configurator/: __init__.py  __main__.py  app_window.py  main.py
waybar_configurator/io/: applier.py  cssgen.py  jsonc.py
waybar_configurator/model/: catalog.py  config.py  theme.py
waybar_configurator/scripts/: disk-io.sh  net-bandwidth.sh  weather.sh
waybar_configurator/ui/: appearance_panel.py  bar_list.py  layout_panel.py  module_form.py  modules_panel.py  preview.py  widgets.py
