[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waybar-configurator"
version = "0.1.0"
description = "Graphical GTK3 configurator for Waybar — bars, modules and styling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "KsmBL" }]
keywords = ["waybar", "gtk", "gtk3", "wayland", "sway", "configurator", "status-bar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
]
dependencies = [
    # PyGObject is normally provided by the distro (python-gobject + gtk3).
    "PyGObject>=3.40",
]

[project.urls]
Homepage = "https://github.com/KsmBl/waybar-configurator"
Repository = "https://github.com/KsmBl/waybar-configurator"
Issues = "https://github.com/KsmBl/waybar-configurator/issues"

[project.scripts]
waybar-configurator = "waybar_configurator.main:main"

[tool.setuptools]
packages = [
    "waybar_configurator",
    "waybar_configurator.model",
    "waybar_configurator.io",
    "waybar_configurator.ui",
]

[tool.setuptools.package-data]
"waybar_configurator" = ["scripts/*.sh"]
